feat: update admin apis
